@startuml

title __CECS277PROJECT3's Class Diagram__\n

  namespace  {
    namespace ECS277Project3 {
      class CECS277Project3.CoinPieces {
          - set : ArrayList<Coins>
          + CoinPieces()
          + CoinPieces()
          + addCoins()
          + addCoins()
          + getValue()
          + removeCoins()
      }
    }
  }
  

  namespace  {
    namespace ECS277Project3 {
      class CECS277Project3.Coins {
          - value : double
          + Coins()
          + Coins()
          + getValue()
          + setValue()
          + toString()
      }
    }
  }
  

  namespace  {
    namespace ECS277Project3 {
      class CECS277Project3.Products {
          - description : String
          - price : double
          + Products()
          + Products()
          + equals()
          + getDescription()
          + getPrice()
          + setDescription()
          + setPrice()
          + toString()
      }
    }
  }
  

  namespace  {
    namespace ECS277Project3 {
      class CECS277Project3.VendingMachine {
          - products : ArrayList<Products>
          + VendingMachine()
          + VendingMachine()
          + addCoins()
          + addProducts()
          + buyProducts()
          + displayProducts()
          + removeMoney()
      }
    }
  }
  

  namespace  {
    namespace ECS277Project3 {
      class CECS277Project3.VendingTest {
          {static} + main()
      }
    }
  }
  

  CECS277Project3.VendingMachine o-- CECS277Project3.CoinPieces : coins
  CECS277Project3.VendingMachine o-- CECS277Project3.CoinPieces : currentCoins


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
